@@ -1,13 +1,16 @@
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 
 plugins {
-    id("ru.vyarus.quality").version("5.0.0")
+    id("ru.vyarus.quality") version "5.0.0"
     id("java-library")
     id("jacoco")
     id("maven-publish")
 }
 
-val suitesDir = "src/test/resources/suites/"
+group = "com.mbi"
+version = "1.0"
+
+val suitesDir = "src/test/resources/suites"
 
 repositories {
     mavenCentral()
@@ -22,21 +25,17 @@ dependencies {
 }
 
 tasks.test {
-    useTestNG {
-        // Add test suites
-        File(projectDir.absolutePath + "/" + suitesDir)
-            .walk()
-            .forEach {
-                if (it.isFile) {
-                    suites(it)
-                }
-            }
+    jvmArgs("--enable-preview")
 
-        testLogging {
-            events("passed", "skipped", "failed")
-            exceptionFormat = TestExceptionFormat.FULL
-            showStandardStreams = true
-        }
+    useTestNG {
+        // Automatically include all XML test suite files from suitesDir
+        fileTree(suitesDir).matching { include("*.xml") }.files.forEach { suites(it) }
+    }
+
+    testLogging {
+        events("passed", "skipped", "failed")
+        exceptionFormat = TestExceptionFormat.FULL
+        showStandardStreams = true
     }
 }
 
@@ -54,11 +53,11 @@ java {
 }
 
 tasks.withType<Javadoc> {
-    val opts = options as StandardJavadocDocletOptions
-    opts.addBooleanOption("Xdoclint:none", true)
+    (options as StandardJavadocDocletOptions).addBooleanOption("Xdoclint:none", true)
 }
 
 quality {
+    // Enable all supported static analysis tools
     checkstyle = true
     pmd = true
     codenarc = true
@@ -72,10 +71,7 @@ tasks.check {
 publishing {
     publications {
         create<MavenPublication>("maven") {
-            groupId = "com.mbi"
             artifactId = "json-validator"
-            version = "1.0"
-
             from(components["java"])
         }
     }
